--- a/DotNet5CRUD/Views/Movies/Details.cshtml
+++ b/DotNet5CRUD/Views/Movies/Details.cshtml
@@ -6,7 +6,7 @@
 
 <div class="row justify-content-between mt-60-px">
     <div class="col-md-3">
-        <img src="data:image/*base64,@(Convert.ToBase64String(Model.Poster))" class="img-thumbnail" alt="@Model.Title" />
+        <img src="data:image/*;base64,@(Convert.ToBase64String(Model.Poster))" class="img-thumbnail" alt="@Model.Title" />
     </div>
     <div class="col-md-7">
         <div class="d-flex justify-content-between mb-3">
