--- a/DotNet5CRUD/Views/Shared/_Layout.cshtml
+++ b/DotNet5CRUD/Views/Shared/_Layout.cshtml
@@ -27,6 +27,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark"  asp-controller="Movies" asp-action="Index">Movies</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-controller="Geners" asp-action="Index">Genres</a>
+                        </li>
                     </ul>
                 </div>
             </div>
