--- a/DotNet5CRUD/Views/Geners/_ShowMovies.cshtml
+++ b/DotNet5CRUD/Views/Geners/_ShowMovies.cshtml
@@ -24,7 +24,20 @@
                                         <i class="bi bi-star-fill text-warning"></i>
                                         <small class="text-muted">@movie.Rate.ToString("0.0")</small>
                                     </p>
-
+                                    <div>
+                                        <a asp-action="Details" asp-controller="Movies" asp-route-id="@movie.Id" class="btn btn-outline-secondary">
+                                            <i class="bi bi-camera-reels"></i>
+                                            Details
+                                        </a>
+                                        <a asp-action="Edit" asp-controller="Movies" asp-route-id="@movie.Id" class="btn btn-outline-primary">
+                                            <i class="bi bi-pencil"></i>
+                                            Edit
+                                        </a>
+                                        <a href="javascript:;" class="btn btn-danger js-delete" data-id="@movie.Id">
+                                            <i class="bi bi-trash"></i>
+                                            Delete
+                                        </a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -34,3 +47,4 @@
         }
     </div>
 </div>
+
